@@ -40,8 +40,12 @@
       }
 
       if (c.editor && c.editor.xtype == 'checkbox') {
-        // Special case of checkbox column
-        var plugin = new Ext.ux.grid.CheckColumn(c);
+        c.ptype = 'checkcolumn';
+        delete c.editor;
+      }
+
+      if (c.ptype) {
+        var plugin = Ext.ComponentMgr.createPlugin(c);
         this.plugins.push(plugin);
         this.columns[i] = plugin;
       } else {
